Add SEO metadata with unique titles and descriptions

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🤖</text></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SimpleAI - Professional AI Automation Agency Landing Page</title>
+    <title>AI Automation & Customer Support | SimpleAI</title>
+    <meta name="description" content="AI agents for automation, customer support and CRM. Faster responses, lower costs, more conversions. Transform your business today." />
     <script type="text/javascript">
       (function(d, t) {
           var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
